Fix contrast for read email items

--- a/packages/colors/themes/src/duotone/standard-base.css
+++ b/packages/colors/themes/src/duotone/standard-base.css
@@ -55,9 +55,6 @@
 
     --optional-main-border-color: transparent;
 
-    --optional-email-item-read-background-color: var(--background-norm);
-    --optional-email-item-read-text-color: var(--text-norm);
-
     --optional-email-item-selected-background-color: var(--interaction-norm-major-1);
     --optional-email-item-selected-icon-background-color: var(--interaction-norm-major-3);
 
